Create a mutable list with pre-defined values